fix z-index

--- a/public_site/estellestyles.css
+++ b/public_site/estellestyles.css
@@ -116,7 +116,7 @@ body {
     display: inline-block;
     position: sticky;
     top: 0px;
-    z-index: 1;
+    z-index: 99;
     height: 100vh;
     width: 65%;
     padding-left: 5%;
@@ -226,7 +226,7 @@ h1 {
     height: 600px;
     padding: 15px;
     text-align: center;
-    z-index: 0;
+    z-index: 100;
 }
 
 .menu h2 {
@@ -499,7 +499,7 @@ h1 {
     opacity: 0;
     /* background-color: blue; */
     /* margin: 0 auto; */
-    z-index: 99;
+    z-index: 10;
 }
 
 #infoGraphicContainer p{
